src/objects/Partner_Fulfillment_Response__c.object
<CustomObject>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Subscription Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Activation Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Subscription Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NewProduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RemoveProduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term End Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Start Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription Start Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TermsAndConditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_JSON__c</fullName>
        <label>Response JSON</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Storefront Fulfillment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Account Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Partner Fulfillment Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Response_JSON__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PFR-{0000000}</displayFormat>
        <label>Partner Fulfillment Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Fulfillment Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>